--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=test
-dummy.base-url=https://dummy.restapiexample.com/api/v1
+dummy.base-url=https://66b2b5147fba54a5b7ea4d59.mockapi.io/api/rest/info
